# llm-projects

./: .gitignore  main.py  pyproject.toml
module/proj_01/: README.md  __init__.py  index.py
module/shared/ai_model/adapter/query_adapter/implementation/anthropic/: __init__.py
module/shared/ai_model/adapter/query_adapter/interface/: __init__.py
module/shared/ai_model/adapter/response_adapter/_interface/: __init__.py
module/shared/ai_model/adapter/response_adapter/implementation/anthropic/: __init__.py
module/shared/ai_model/clients/implementation/: __init__.py
module/shared/ai_model/clients/implementation/anthropic/: anthropic_client.py
module/shared/ai_model/clients/interface/: __init__.py  ai_client_interface.py
module/shared/ai_model/factory/: ai_client_factory.py
