[project]
name = "my-method"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.71.0",
    "beautifulsoup4>=4.14.2",
    "chromadb>=1.2.0",
    "datasets==3.6.0",
    "feedparser>=6.0.12",
    "google-generativeai>=0.8.5",
    "gradio>=5.49.1",
    "ipykernel>=7.0.1",
    "ipywidgets>=8.1.7",
    "jupyter-dash>=0.4.2",
    "langchain>=1.0.0",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4",
    "langchain-core>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "matplotlib>=3.10.7",
    "modal>=1.2.0",
    "numpy>=2.3.4",
    "ollama>=0.6.0",
    "openai>=2.5.0",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "protobuf==3.20.2",
    "psutil>=7.1.1",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "sentence-transformers>=5.1.1",
    "setuptools>=80.9.0",
    "speedtest-cli>=2.1.3",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "wandb>=0.22.2",
]
